--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/style/app.css">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="shorcut icon" href="/favicon.png">
+	<link rel="shortcut icon" href="/favicon">
 </head>
 <body>
 	<header>
@@ -14,7 +14,7 @@
 		<hr>
 	</header>
 	<main>
-		{{body}}
+		{{{body}}}
 	</main>
 </body>
 </html>
